se renombro el archivo evidenciahtmlcssjava por index para que se muestre correcta mente en github

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ un html5-->
     
 </head>
 <body>
-    <h1 class="title-color"> HTML/Responsive web design  Certifications</h1>
+    <h1 class="title-color">¿Quieres mas exito para tu negocio?</h1>
 <!--La etiqueta h1 habitual mente indica la cabecera mas
 importante de una pagina web-->
 <main>
