Se agregaron bordes en la foto principal y sobre el titulo,se Eeditaron algunos parrafos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ un html5-->
     
 </head>
 <body>
-    <h1 class="title-color">¿Quieres mas exito para tu negocio?</h1>
+    <h1 class="title-color title-border">Quieres mas exito para tu negocio?</h1>
 <!--La etiqueta h1 habitual mente indica la cabecera mas
 importante de una pagina web-->
 <main>
@@ -41,17 +41,16 @@ importante de una pagina web-->
     definir el contenido principal de una web  o el contenido
 mas destacado. solo puede haber una etiqueta main-->
 
-<p class="paragraph"> Etiqueta p de Paragrahp que significa parrafo. 
-    este parrafo serra usado para pruebas de hipervinculos con 
-    la etiqueta "a" de anchor
-    <A href="#pruebaanchorinternallink">Este es un link 
-        interno de prueba.
-    </A>
-    <a href="#piedepagina">
-        Hipervincullo de prueba al pie de pagina
-    </a>
-
+<p class="paragraph"> Hoy en dia como negocio es importante tener una pagina web &iexcl;yo puedo ayudarte!
 </p>
+  <div>
+    <a href="#pruebaanchorinternallink">cuando estes listo da click aqui para conocer mas!
+    </a>
+    <a href="#piedepagina">
+       ¡ click aqui si quieres ir direccto a mi informacion de contacto!
+    </a>
+</div>
+
 <!--LA etiquea p se usa para construir parrafos-->
 <ol class="sub-title">
  <li> Lenguaje HTML </li>
