Se agrego un fondo oscuro a la etiqueta div

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@ mas destacado. solo puede haber una etiqueta main-->
 
 <p class="paragraph"> Hoy en dia como negocio es importante tener una pagina web &iexcl;yo puedo ayudarte!
 </p>
-  <div>
+  <div class="background-color">
     <a href="#pruebaanchorinternallink">cuando estes listo da click aqui para conocer mas!
     </a>
     <a href="#piedepagina">
        ¡ click aqui si quieres ir direccto a mi informacion de contacto!
     </a>
+    <p>a continuacion te mostraremos como usar una pagina web para tu empresa</p>
 </div>
-
 <!--LA etiquea p se usa para construir parrafos-->
 <ol class="sub-title">
  <li> Lenguaje HTML </li>
