Se agregaron atributos id de titulo-principal a etiqueta h1,se agrego id a la lista numerada,, se agrego un color de fondo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ estas etiquetas  para poder explicar nuestro codigo-->
 le indica al navegador el tipo de documento que estamos
 programando que en este caso declaramos que esto es
 un html5-->
-<html>
+<html class="html-properties">
     <!--Recuerda que todo el codigo dentro de una pagina web
     en html debe de ir dentro de la etiqueta anterior-->
 <head>
@@ -33,7 +33,7 @@ un html5-->
     
 </head>
 <body>
-    <h1 class="title-color title-border">Quieres mas exito para tu negocio?</h1>
+    <h1 id="Titulo-principal" class="title-color title-border">Quieres mas exito para tu negocio?</h1>
 <!--La etiqueta h1 habitual mente indica la cabecera mas
 importante de una pagina web-->
 <main>
@@ -52,7 +52,7 @@ mas destacado. solo puede haber una etiqueta main-->
     <p>a continuacion te mostraremos como usar una pagina web para tu empresa</p>
 </div>
 <!--LA etiquea p se usa para construir parrafos-->
-<ol class="sub-title">
+<ol id="lista-numerada" class="sub-title">
  <li> Lenguaje HTML </li>
  <li> CSS</li>
  <li>Java script </li>
