Se agrego una barra en la parte supperior de la hoja

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ un html5-->
     
 </head>
 <body>
+    <div class="gray-bar"> </div>
     <h1 id="Titulo-principal" class="title-color title-border">Quieres mas exito para tu negocio?</h1>
 <!--La etiqueta h1 habitual mente indica la cabecera mas
 importante de una pagina web-->
