--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@ un html5-->
 </head>
 <body>
     <div class="gray-bar"> </div>
+    <div class="second-gray-bar"></div>
+    <div class="orange"></div>
+    <div class="cyan"></div>
+    <div class="raspberry"></div>
+
     <h1 id="Titulo-principal" class="title-color title-border">Quieres mas exito para tu negocio?</h1>
 <!--La etiqueta h1 habitual mente indica la cabecera mas
 importante de una pagina web-->
