--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ texto aleatorio para rellenoa
 texto aleatorio para rellenoa
 </p>
 <a href="#">
-<img class="medium-image" src="https://scontent.fmtt1-1.fna.fbcdn.net/v/t31.0-8/p720x720/22339579_1594856380552600_8674757941758962716_o.jpg?_nc_cat=110&_nc_sid=a4a2d7&_nc_ohc=wW3wfbtP0FYAX8dV0Ry&_nc_ht=scontent.fmtt1-1.fna&_nc_tp=6&oh=46d1a543568b8ac62a119254fe62e7c3&oe=5EC01043" 
+<img id="foto-diego" class="medium-image" src="https://scontent.fmtt1-1.fna.fbcdn.net/v/t31.0-8/p720x720/22339579_1594856380552600_8674757941758962716_o.jpg?_nc_cat=110&_nc_sid=a4a2d7&_nc_ohc=wW3wfbtP0FYAX8dV0Ry&_nc_ht=scontent.fmtt1-1.fna&_nc_tp=6&oh=46d1a543568b8ac62a119254fe62e7c3&oe=5EC01043" 
 alt="Vemos una foto diego vidal como ejemplo" > 
 </a>
 <!--La etiqueta img se usa para introducir imagenes acompañada
