Se agrego un cuadro con colores degradados y con la funcion de hover

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@ pagina web. en este caso facebook-->
     Enlaces:
     https://www.htmlquick.com/es/reference/tags/div.html
 </p>
+<div id="cuadro-colores"></div>
 <footer id="piedepagina">
   etiqueta footer o pie de pagina  Pie de pagina.
 </footer>
