Se agrego una forma de corazon con ayuda de una nueva etiqueta div y con nuevas ediciones en la hoja de estilo

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@ pagina web. en este caso facebook-->
     https://www.htmlquick.com/es/reference/tags/div.html
 </p>
 <div id="cuadro-colores"></div>
+<div class="heart"></div>
 <footer id="piedepagina">
   etiqueta footer o pie de pagina  Pie de pagina.
 </footer>
