Se agrego una animacion que cambia de colores al final del documentos con el id rect y con nombre de animacion rainbow

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@ pagina web. en este caso facebook-->
 </p>
 <div id="cuadro-colores"></div>
 <div class="heart"></div>
+<div id="rect"></div>
 <footer id="piedepagina">
   etiqueta footer o pie de pagina  Pie de pagina.
 </footer>
