Se aggrego informacion de contacto de forma horizontal y con posicion fixed en la parte superior de la pagina, se le agrego el atributo inline size con valor de 99 por ciento para lograr que la barra cubra casi toda la pantalla,

--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@ un html5-->
     
 </head>
 <body>
-    <div class="gray-bar"> </div>
+    <div class="gray-bar">
+    <p>¡Contactame!</p>
+        <ul class="datos-contacto">
+            <li>Telefono celular: 993 432 0592</li>
+            <li>Correo electronico: diego27796gagan@mail.com</li>
+        </ul>
+   
+    </div>
     <div class="second-gray-bar"></div>
     <div class="orange"></div>
     <div class="cyan"></div>
