Se agrego animacion de objeto redondo con fondo gradiente que se desplaza al poner el mouse

--- a/index.html
+++ b/index.html
@@ -175,7 +175,10 @@ pagina web. en este caso facebook-->
 <div id="cuadro-colores"></div>
 <div class="heart"></div>
 <div id="rect"></div>
+<div id="ball"></div>
+
 <footer id="piedepagina">
+    
   etiqueta footer o pie de pagina  Pie de pagina.
 </footer>
 </main>
