Se agrego animacion de esfera con colo gradiente rebontanto vertical mente con bucle infinito

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ pagina web. en este caso facebook-->
 <div class="heart"></div>
 <div id="rect"></div>
 <div id="ball"></div>
+<div id="ball2"></div>
 
 <footer id="piedepagina">
     
