--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@ un html5-->
     <!--el codigo anterior fue desactivado ya que la hoja css no se leia por que no se ha subido al servidor web-->
     <link href="estilos.css" rel="stylesheet" type="text/css"> 
     <meta name="tu pagina web" 
-    content="Programacion de tu pagina web"
-
-    >
+    content="Programacion de tu pagina web"  >
     <script>
 
     </script>
@@ -45,15 +43,13 @@ un html5-->
     <div class="orange"></div>
     <div class="cyan"></div>
     <div class="raspberry"></div>
-
-    <h1 id="Titulo-principal" class="title-color title-border">Quieres mas exito para tu negocio?</h1>
-<!--La etiqueta h1 habitual mente indica la cabecera mas
-importante de una pagina web-->
 <main>
 <!--REcordemos que la etiqueta main sirve para
     definir el contenido principal de una web  o el contenido
 mas destacado. solo puede haber una etiqueta main-->
-
+<h1 id="Titulo-principal" class="title-color title-border">Quieres mas exito para tu negocio?</h1>
+<!--La etiqueta h1 habitual mente indica la cabecera mas
+importante de una pagina web-->
 <p class="paragraph"> Hoy en dia como negocio es importante tener una pagina web &iexcl;yo puedo ayudarte!
 </p>
   <div class="background-color">
