Se agregaron subtitulos de ejmeplo y se corrigio la posicion de la etiqueta h1 moviendose dentro del body

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@ importante de una pagina web-->
     <a href="#piedepagina">
        ¡ click aqui si quieres ir direccto a mi informacion de contacto!
     </a>
+ <h2>Subtitulo 2 de muestra</h2>
+      <h3>subtitulo 3 de muestra</h3>
+     <h3>otro subtitulo 3 de muestra</h3>
+ <h2>Subtitulo 2 de otro tema</h2>     
+   <h3>sutitulo 3 de muestra otro tema</h3>
+   <h3>otro subrirulo 3 otro tema</h3>
     <p>a continuacion te mostraremos como usar una pagina web para tu empresa</p>
 </div>
 <!--LA etiquea p se usa para construir parrafos-->
