Se agrego unejemlo de como usar las etiqutas article

--- a/index.html
+++ b/index.html
@@ -174,6 +174,27 @@ pagina web. en este caso facebook-->
     Enlaces:
     https://www.htmlquick.com/es/reference/tags/div.html
 </p>
+<p> A continuacion explicamos el uso de estas 4 etiqutas para ordenar bien tus html
+    <ol>
+        <li>div se usa para grupos de contenido</li>
+        <li>Article se usa para grupos de contenido independientes</li>
+        <li>section para grupos de contenido relacionado, como subtitulos o capitulos de la etiqueta articles, po ejemplo</li>
+    </ol>
+</p>
+<p>A continuacion se muestra como se usan las etiquetas  anteriores</p>
+<article>
+    <h2>The Garfield Files: Lasagna as Training Fuel?</h2>
+    <p>The internet is littered with varying opinions on nutritional paradigms, from catnip paleo to hairball cleanses. But let's turn our attention to an often overlooked fitness fuel, and examine the protein-carb-NOM trifecta that is lasagna...</p>
+  </article>
+
+  <article>
+    <h2>Defeating your Foe: the Red Dot is Ours!</h2>
+    <p>Felines the world over have been waging war on the most persistent of foes. This red nemesis combines both cunning stealth and lightening speed. But chin up, fellow fighters, our time for victory may soon be near...</p>
+  </article>
+
+  <article>
+    <h2>Is Chuck Norris a Cat Person?</h2>
+    <p>Chuck Norris is widely regarded as the premier martial artist on the planet, and it's a complete coincidence anyone who disagrees with this fact mysteriously disappears soon after. But the real question is, is he a cat person?...</p>  </article>
 <div id="cuadro-colores"></div>
 <div class="heart"></div>
 <div id="rect"></div>
