Se agrego la etiqueta header, la cual es diferente a head

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@ un html5-->
 <!--REcordemos que la etiqueta main sirve para
     definir el contenido principal de una web  o el contenido
 mas destacado. solo puede haber una etiqueta main-->
+<header>
 <h1 id="Titulo-principal" class="title-color title-border">Quieres mas exito para tu negocio?</h1>
+</header>
 <!--La etiqueta h1 habitual mente indica la cabecera mas
 importante de una pagina web-->
 <p class="paragraph"> Hoy en dia como negocio es importante tener una pagina web &iexcl;yo puedo ayudarte!
