--- a/index.html
+++ b/index.html
@@ -1,224 +1,230 @@
 <!DOCTYPE html>
-<!--Antes de empezar. Comentar es una forma de dejar
+    <!--Antes de empezar. Comentar es una forma de dejar
 comentarios sin afectar el codigo, 
 usan las etiquetas con las que este texto
 inicia y finaliza, es importante saberlo ya que usaremos
 estas etiquetas  para poder explicar nuestro codigo-->
-<!--Nota de  la etiqueta anterior: Recuerda que la etiqueta de arriba 
+    <!--Nota de  la etiqueta anterior: Recuerda que la etiqueta de arriba 
 le indica al navegador el tipo de documento que estamos
 programando que en este caso declaramos que esto es
 un html5-->
 <html class="html-properties">
     <!--Recuerda que todo el codigo dentro de una pagina web
     en html debe de ir dentro de la etiqueta anterior-->
-<head>
-    <title>
+    <head>
+      <title>
         ¿Deseas tener tu propia pagina web?
-    </title>
-    <!--<base 
+      </title>
+     <!--<base 
      href="https://dgfi5lk3rpbwjyogvudjnq-on.drv.tw/Test Pagina web/www.coderdiegovidalgagan.com/evidenciahtmlcssjava.html"
     target="_blank"> -->
-    <!--el codigo anterior fue desactivado ya que la hoja css no se leia por que no se ha subido al servidor web-->
-    <link href="estilos.css" rel="stylesheet" type="text/css"> 
-    <meta name="tu pagina web" 
-    content="Programacion de tu pagina web"  >
-    <script>
+     <!--el codigo anterior fue desactivado ya que la hoja css no se leia por que no se ha subido al servidor web-->
+      <link href="estilos.css" rel="stylesheet" type="text/css"> 
+      <meta name="tu pagina web" 
+     content="Programacion de tu pagina web"  >
+      <script>
 
-    </script>
-    <style>
+      </script>
+      <style>
 
-    </style>
+      </style>
     
-</head>
-<body>
-    <div class="gray-bar">
-    <p>¡Contactame!</p>
-        <ul class="datos-contacto">
+    </head>
+    <body>
+      <div class="gray-bar">
+         <ul class="datos-contacto">
+             <li>Contactame!</li>
             <li>Telefono celular: 993 432 0592</li>
             <li>Correo electronico: diego27796gagan@mail.com</li>
-        </ul>
-   
-    </div>
-    <div class="second-gray-bar"></div>
-    <div class="orange"></div>
-    <div class="cyan"></div>
-    <div class="raspberry"></div>
-<main>
-<!--REcordemos que la etiqueta main sirve para
+         </ul>
+      </div>
+      <nav class="main-nav-bar">
+          <ul class="main-list-nav">
+              <li> Por que diego vidal?</li>
+              <li> Mejora constante</li>
+              <li>siempe competitivos</li>
+          </ul>
+      </nav>
+       <div class="second-gray-bar"></div>
+       <div class="orange"></div>
+       <div class="cyan"></div>
+       <div class="raspberry"></div>
+     <main>
+      <!--REcordemos que la etiqueta main sirve para
     definir el contenido principal de una web  o el contenido
 mas destacado. solo puede haber una etiqueta main-->
-<header>
-<h1 id="Titulo-principal" class="title-color title-border">Quieres mas exito para tu negocio?</h1>
-</header>
-<!--La etiqueta h1 habitual mente indica la cabecera mas
-importante de una pagina web-->
-<p class="paragraph"> Hoy en dia como negocio es importante tener una pagina web &iexcl;yo puedo ayudarte!
-</p>
-  <div class="background-color">
-    <a href="#pruebaanchorinternallink">cuando estes listo da click aqui para conocer mas!
-    </a>
-    <a href="#piedepagina">
+     <header>
+     <h1 id="Titulo-principal" class="title-color title-border">Quieres mas exito para tu negocio?</h1>
+     </header>
+     <!--La etiqueta h1 habitual mente indica la cabecera mas
+      importante de una pagina web-->
+     <p class="paragraph"> Hoy en dia como negocio es importante tener una pagina web &iexcl;yo puedo ayudarte!
+     </p>
+     <div class="background-color">
+     <a href="#pruebaanchorinternallink">cuando estes listo da click aqui para conocer mas!
+     </a>
+     <a href="#piedepagina">
        ¡ click aqui si quieres ir direccto a mi informacion de contacto!
-    </a>
- <h2>Subtitulo 2 de muestra</h2>
+     </a>
+     <h2>Subtitulo 2 de muestra</h2>
       <h3>subtitulo 3 de muestra</h3>
      <h3>otro subtitulo 3 de muestra</h3>
- <h2>Subtitulo 2 de otro tema</h2>     
-   <h3>sutitulo 3 de muestra otro tema</h3>
-   <h3>otro subrirulo 3 otro tema</h3>
-    <p>a continuacion te mostraremos como usar una pagina web para tu empresa</p>
-</div>
-<!--LA etiquea p se usa para construir parrafos-->
-<ol id="lista-numerada" class="sub-title">
- <li> Lenguaje HTML </li>
- <li> CSS</li>
- <li>Java script </li>
- <!--La etiqueta Li representa un articulo o
-elemento de la lista ordenada-->
- </ol>
-<!--recordemos que la etiqueta ol representa una lista 
-    ordenada de articulos en contraste con los articulos
-no ordenados-->
-<p>
-    Para poder escribir hablar sobre las etiquetas de html
-    necesitamos redactarlas de alguna forma para que nuestro
-    editor de codigo no lo interprete como leguaje de codigop,
-    para eso sera necesario usar lago llamado Entidades de 
-    caracteres, "&lt;" "&gt;", Puedes encontrar informacion 
-    sobre esto en el siguiente link: 
-    http://www.noeliaespinosa.com/mostrar-codigo-html-sin-que-se-ejecute/
-Existen etiquetas descriptivas como &lt;main&gt;, &lt;header&gt; 
-&lt;footer&gt;&lt;nav&gt;&lt;video&gt; &lt;article&gt;
-&lt;section&gt; y  muchas otras.
-Estas etiquetas describen la estructura de tu documento html.
-a continuacion tenemos una imagen de ejemplo de mi:
+     <h2>Subtitulo 2 de otro tema</h2>     
+     <h3>sutitulo 3 de muestra otro tema</h3>
+     <h3>otro subrirulo 3 otro tema</h3>
+     <p>a continuacion te mostraremos como usar una pagina web para tu empresa</p>
+     </div>
+     <!--LA etiquea p se usa para construir parrafos-->
+     <ol id="lista-numerada" class="sub-title">
+     <li> Lenguaje HTML </li>
+     <li> CSS</li>
+     <li>Java script </li>
+     <!--La etiqueta Li representa un articulo o
+     elemento de la lista ordenada-->
+     </ol>
+     <!--recordemos que la etiqueta ol representa una lista 
+     ordenada de articulos en contraste con los articulos
+    no ordenados-->
+     <p>
+     Para poder escribir hablar sobre las etiquetas de html
+     necesitamos redactarlas de alguna forma para que nuestro
+     editor de codigo no lo interprete como leguaje de codigop,
+     para eso sera necesario usar lago llamado Entidades de 
+     caracteres, "&lt;" "&gt;", Puedes encontrar informacion 
+     sobre esto en el siguiente link: 
+     http://www.noeliaespinosa.com/mostrar-codigo-html-sin-que-se-ejecute/
+     Existen etiquetas descriptivas como &lt;main&gt;, &lt;header&gt; 
+     &lt;footer&gt;&lt;nav&gt;&lt;video&gt; &lt;article&gt;
+     &lt;section&gt; y  muchas otras.
+     Estas etiquetas describen la estructura de tu documento html.
+     a continuacion tenemos una imagen de ejemplo de mi:
 
-texto aleatorio para rellenoa
-texto aleatorio para rellenoa
-texto aleatorio para rellenoa
-texto aleatorio para rellenoa
-texto aleatorio para rellenoa
-texto aleatorio para rellenoa
-texto aleatorio para rellenoa
-texto aleatorio para rellenoa
-texto aleatorio para rellenoa
-</p>
-<a href="#">
-<img id="foto-diego" class="medium-image" src="https://scontent.fmtt1-1.fna.fbcdn.net/v/t31.0-8/p720x720/22339579_1594856380552600_8674757941758962716_o.jpg?_nc_cat=110&_nc_sid=a4a2d7&_nc_ohc=wW3wfbtP0FYAX8dV0Ry&_nc_ht=scontent.fmtt1-1.fna&_nc_tp=6&oh=46d1a543568b8ac62a119254fe62e7c3&oe=5EC01043" 
-alt="Vemos una foto diego vidal como ejemplo" > 
-</a>
-<!--La etiqueta img se usa para introducir imagenes acompañada
-de "src="aqui va un link de una foto"" donde se introduce
-el link de la foto que queremos mostrar-->
-<a href="https://www.facebook.com/diego2587/">
-click aqui para ver mi facebook
-</a>
-<p id="pruebaanchorinternallink">
-    Etiqueta parrafo :Este es un parrafo de ejemplo usado para crear 
-    un hipervinculo hacia aqui.
-</p>
-<p>
-a continuacion podemos ver una lista no ordenada
-que usa los comandos  ul para abri y cerar lista
-y "li" para indicuar un articulo de la lista
-</p>
-<ul>
-    <li> Lista no ordenada 1</li>
-    <li>Lista no ordenada 2</li>
-    <li> lista no ordenada 3</li>
-</ul>
-<p>
-    A continuacion crearemos una fomrulario web
-</p>
-<form action="#">
-    <input type="text" placeholder="Marcador de ejempo" required>
-    <button type="submit">
+     texto aleatorio para rellenoa
+     texto aleatorio para rellenoa
+     texto aleatorio para rellenoa
+     texto aleatorio para rellenoa
+     texto aleatorio para rellenoa
+     texto aleatorio para rellenoa
+     texto aleatorio para rellenoa
+     texto aleatorio para rellenoa
+     texto aleatorio para rellenoa
+     </p>
+     <a href="#">
+     <img id="foto-diego" class="medium-image" src="https://scontent.fmtt1-1.fna.fbcdn.net/v/t31.0-8/p720x720/22339579_1594856380552600_8674757941758962716_o.jpg?_nc_cat=110&_nc_sid=a4a2d7&_nc_ohc=wW3wfbtP0FYAX8dV0Ry&_nc_ht=scontent.fmtt1-1.fna&_nc_tp=6&oh=46d1a543568b8ac62a119254fe62e7c3&oe=5EC01043" 
+     alt="Vemos una foto diego vidal como ejemplo" > 
+     </a>
+     <!--La etiqueta img se usa para introducir imagenes acompañada
+     de "src="aqui va un link de una foto"" donde se introduce
+     el link de la foto que queremos mostrar-->
+     <a href="https://www.facebook.com/diego2587/">
+     click aqui para ver mi facebook
+     </a>
+     <p id="pruebaanchorinternallink">
+     Etiqueta parrafo :Este es un parrafo de ejemplo usado para crear 
+     un hipervinculo hacia aqui.
+     </p>
+     <p>
+     a continuacion podemos ver una lista no ordenada
+     que usa los comandos  ul para abri y cerar lista
+     y "li" para indicuar un articulo de la lista
+     </p>
+     <ul>
+     <li> Lista no ordenada 1</li>
+     <li>Lista no ordenada 2</li>
+     <li> lista no ordenada 3</li>
+     </ul>
+     <p>
+     A continuacion crearemos una fomrulario web
+     </p>
+     <form action="#">
+     <input type="text" placeholder="Marcador de ejempo" required>
+     <button type="submit">
         Este boton envia la respuesta
-    </button>
-</form>
-<p>
-    A continuacion crearemos un conjunto de botones
-    de radio.
-</p>
-<form>
-    <input id="radiop1" type="radio" name="botonesradiospreubas" value="radio1" checked>
-    <label for="radiop1"> Radio prueba 1 </label>
-    <input id="radiop2" type="radio" name="botonesradiospreubas" value="radio2">
-    <label for="radiop2"> Radio prueba 2 </label>
-    <input id="radiop3" type="radio" name="botonesradiospreubas" value="radio3">
-    <label for="radiop3"> Radio prueba 3 </label>
-    <!--Los codigos anteriores que incluyen las labes 
-    con radios sirven para hacer opciones multiples
-donde solo se pueda selecionar una opcion, puesto que
-al selecionar otra la primera selecionada se 
-deseleciona-->
-</form>
-<div>   
-<p>
-    A continuacion haremos un ejemplo de checkboses
-    que son un tipo de entrada 2  
-</p>
-<form>
+     </button>
+     </form>
+     <p>
+     A continuacion crearemos un conjunto de botones
+     de radio.
+     </p>
+     <form>
+     <input id="radiop1" type="radio" name="botonesradiospreubas" value="radio1" checked>
+     <label for="radiop1"> Radio prueba 1 </label>
+     <input id="radiop2" type="radio" name="botonesradiospreubas" value="radio2">
+     <label for="radiop2"> Radio prueba 2 </label>
+     <input id="radiop3" type="radio" name="botonesradiospreubas" value="radio3">
+     <label for="radiop3"> Radio prueba 3 </label>
+     <!--Los codigos anteriores que incluyen las labes 
+     con radios sirven para hacer opciones multiples
+     donde solo se pueda selecionar una opcion, puesto que
+     al selecionar otra la primera selecionada se 
+     deseleciona-->
+     </form>
+     <div>   
+     <p>
+     A continuacion haremos un ejemplo de checkboses
+     que son un tipo de entrada 2  
+     </p>
+     <form>
 
-    <input type="checkbox" id="checkbox1" name="botonescheckbox"checked>
-    <label for="checkbox1">checkbox1  </label>
-    <input type="checkbox" id="checkbox1" name="botonescheckbox">
-    <label for="checkbox2">checkbox2  </label>
-    <input type="checkbox" id="checkbox1" name="botonescheckbox">
-    <label for="checkbox3">checkbox3  </label>
+     <input type="checkbox" id="checkbox1" name="botonescheckbox"checked>
+     <label for="checkbox1">checkbox1  </label>
+     <input type="checkbox" id="checkbox1" name="botonescheckbox">
+     <label for="checkbox2">checkbox2  </label>
+     <input type="checkbox" id="checkbox1" name="botonescheckbox">
+     <label for="checkbox3">checkbox3  </label>
 
-</form>
-</div>
-<!---la etiqueta anterior nos permite agregar
-un texto con hipervinculo auna
-pagina web. en este caso facebook-->
-<p>
-    Enlaces:
-    https://www.htmlquick.com/es/reference/tags/div.html
-</p>
-<p> A continuacion explicamos el uso de estas 4 etiqutas para ordenar bien tus html
-    <ol>
+     </form>
+     </div>
+     <!---la etiqueta anterior nos permite agregar
+     un texto con hipervinculo auna
+     pagina web. en este caso facebook--> 
+     <p>
+     Enlaces:
+     https://www.htmlquick.com/es/reference/tags/div.html
+     </p>
+     <p> A continuacion explicamos el uso de estas 4 etiqutas para ordenar bien tus html
+     <ol>
         <li>div se usa para grupos de contenido</li>
         <li>Article se usa para grupos de contenido independientes</li>
         <li>section para grupos de contenido relacionado, como subtitulos o capitulos de la etiqueta articles, po ejemplo</li>
-    </ol>
-</p>
-<p>A continuacion se muestra como se usan las etiquetas  anteriores</p>
-<article>
-    <h2>The Garfield Files: Lasagna as Training Fuel?</h2>
-    <p>The internet is littered with varying opinions on nutritional paradigms, from catnip paleo to hairball cleanses. But let's turn our attention to an often overlooked fitness fuel, and examine the protein-carb-NOM trifecta that is lasagna...</p>
-  </article>
+     </ol>
+     </p>
+     <p>A continuacion se muestra como se usan las etiquetas  anteriores</p>
+     <article>
+     <h2>The Garfield Files: Lasagna as Training Fuel?</h2>
+     <p>The internet is littered with varying opinions on nutritional paradigms, from catnip paleo to hairball cleanses. But let's turn our attention to an often overlooked fitness fuel, and examine the protein-carb-NOM trifecta that is lasagna...</p>
+     </article>
 
-  <article>
-    <h2>Defeating your Foe: the Red Dot is Ours!</h2>
-    <p>Felines the world over have been waging war on the most persistent of foes. This red nemesis combines both cunning stealth and lightening speed. But chin up, fellow fighters, our time for victory may soon be near...</p>
-  </article>
+     <article>
+     <h2>Defeating your Foe: the Red Dot is Ours!</h2>
+     <p>Felines the world over have been waging war on the most persistent of foes. This red nemesis combines both cunning stealth and lightening speed. But chin up, fellow fighters, our time for victory may soon be near...</p>
+     </article>
 
-  <article>
-    <h2>Is Chuck Norris a Cat Person?</h2>
-    <p>Chuck Norris is widely regarded as the premier martial artist on the planet, and it's a complete coincidence anyone who disagrees with this fact mysteriously disappears soon after. But the real question is, is he a cat person?...</p>  </article>
-<div id="cuadro-colores"></div>
-<div class="heart"></div>
-<div id="rect"></div>
-<div id="ball"></div>
-<div id="ball2"></div>
+     <article>
+     <h2>Is Chuck Norris a Cat Person?</h2>
+     <p>Chuck Norris is widely regarded as the premier martial artist on the planet, and it's a complete coincidence anyone who disagrees with this fact mysteriously disappears soon after. But the real question is, is he a cat person?...</p>  </article>
+     <div id="cuadro-colores"></div>
+     <div class="heart"></div>
+     <div id="rect"></div>
+     <div id="ball"></div>
+     <div id="ball2"></div>
 
-<footer id="piedepagina">
+     <footer id="piedepagina">
     
   etiqueta footer o pie de pagina  Pie de pagina.
-</footer>
+     </footer>
 </main>
 <!--Aqui cierra la tag main, nunca nunca deben ir dentro de
 las etiquetas header, footer, article, aside y nav, 
 es decir, las etiquetas anteriores pueden ir dentro de main
 pero la etiqueta main no debe ir dentro de las anteriores-->
-</body>
+    </body>
 </html>
-<!--LA etiqueta /html se usa  para cerrar todo el documento
+    <!--LA etiqueta /html se usa  para cerrar todo el documento
 la mayoria de las etiquetas cierran con 
 "/ejemplo", esto significa que usamos la misma
 etiqueta de paertura pero le agregamos la diagonal/-->
-<!--
+    <!--
     Para actualizar repositorio github
 
 -->
