Se agrego la propiedad font-zise a las barras de contacto y navegacion

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ un html5-->
       </div>
       <nav class="main-nav-bar">
           <ul class="main-list-nav">
-              <li> Por que diego vidal?</li>
-              <li> Mejora constante</li>
-              <li>siempe competitivos</li>
+            <li><a href="#">Por que Diego vidal?  </a></li>
+              <li><a href="#">  Mejora constante</a></li>
+              <li><a href="#">siempe competitivos</a></li>
           </ul>
       </nav>
        <div class="second-gray-bar"></div>
