Se agrego el nomre de la empresa a lapagina web

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ mas destacado. solo puede haber una etiqueta main-->
 
      <footer id="piedepagina">
     
-  etiqueta footer o pie de pagina  Pie de pagina.
+        &copy; DVidal Solutions Company
      </footer>
 </main>
 <!--Aqui cierra la tag main, nunca nunca deben ir dentro de
