Se agrego un link para mostrar mi primera prueba de freeCodeCamp

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ un html5-->
        <div class="orange"></div>
        <div class="cyan"></div>
        <div class="raspberry"></div>
-     <main>
+       <main>
       <!--REcordemos que la etiqueta main sirve para
     definir el contenido principal de una web  o el contenido
 mas destacado. solo puede haber una etiqueta main-->
@@ -209,12 +209,31 @@ mas destacado. solo puede haber una etiqueta main-->
      <div id="ball"></div>
      <div id="ball2"></div>
 
+     <p>
+       A continuacion les muestro mi 
+       <a href="https://diegogagan2587.github.io/Pagina-tributo/">primera actividad 
+        como desarrollador web</a>
+     </p>
+     <p>
+      Why do we use it?
+      It is a long established fact that a reader will be distracted by 
+      the readable content of a page when looking at its layout. The point
+       of using Lorem Ipsum is that it has a more-or-less normal 
+       distribution of letters, as opposed to using 'Content here,
+        content here', making it look like readable English. Many desktop 
+        publishing packages and web page editors now use Lorem Ipsum as 
+        their default model text, and a search for 'lorem ipsum' will uncover
+         many web sites still in their infancy. Various versions have evolved 
+         over the years, sometimes by accident, sometimes on purpose 
+         (injected humour and the like).
+     </p>
+
      <footer id="piedepagina">
     
         &copy; DVidal Solutions Company
      </footer>
-</main>
-<!--Aqui cierra la tag main, nunca nunca deben ir dentro de
+       </main>
+       <!--Aqui cierra la tag main, nunca nunca deben ir dentro de
 las etiquetas header, footer, article, aside y nav, 
 es decir, las etiquetas anteriores pueden ir dentro de main
 pero la etiqueta main no debe ir dentro de las anteriores-->
