Se agregaron dos enlaces a mis actividades de aprendizaje

--- a/index.html
+++ b/index.html
@@ -210,10 +210,20 @@ mas destacado. solo puede haber una etiqueta main-->
      <div id="ball2"></div>
 
      <p>
-       A continuacion les muestro mi 
-       <a href="https://diegogagan2587.github.io/Pagina-tributo/">primera actividad 
+       A continuacion les dejo enlaces a mis trabajos aprendiendo:
+       <ul>
+       <li><a href="https://diegogagan2587.github.io/Pagina-tributo/" target="_blank">primera actividad 
         como desarrollador web</a>
+      </li>
+      <li><a href="https://diegogagan2587.github.io/Survey-form-fcc/" target="_blank">segunda actividad
+        como desarrollador web</a>
+      </li>
+      </ul>
      </p>
+
+
+     
+
      <p>
       Why do we use it?
       It is a long established fact that a reader will be distracted by 
