we make directories for images,scripts and styles,also we add a test image of Diego Vidal

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@ mas destacado. solo puede haber una etiqueta main-->
          over the years, sometimes by accident, sometimes on purpose 
          (injected humour and the like).
      </p>
+     <img src="images/diego-vidal-givenchy.jpg" alt="My test image">
 
      <footer id="piedepagina">
     
