we add directories for a new page

--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@ mas destacado. solo puede haber una etiqueta main-->
       <li><a href="https://diegogagan2587.github.io/Survey-form-fcc/" target="_blank">segunda actividad
         como desarrollador web</a>
       </li>
+      <li><a href="product-landing-page/index.html" target="_blank">tercera actividad
+        como desarrollador web</a>
       </ul>
      </p>
 
