Landing-page-index SE agregaron multiples etiquetas y atributos

--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -1,13 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="english">
     <head>
+       <link href="reset.css"
+       rel="stylesheet"
+       type="text/css">
         <link 
         href="estilos.css" 
         rel="stylesheet" 
         type="text/css"> 
+        <title>Product Landing Page</title>
     </head>
     <body>
-        <header>Encabezado de prueba</header>
-        
+        <nav>
+            <ul>
+                <li>Features</li>
+                <li>How It Works</li>
+                <li>Pricing</li>
+            </ul>
+        </nav>
+        <header>
+            <h1>Handcrafted, home-made masterpieces</h1>
+        </header>
+        <form id="email-form">
+        <input type="email"
+        id="email-input" 
+        placeholder="Enter your email address">
+    </form>
+    <h2>Premium Materias</h2>
+    <p>Our trombones use the shiniest brass which is 
+        sourced locally. This will increase the longevity
+        of your purchase
+    </p>
+    <h2>Fast Shipping</h2>
+    <p>We make sure you recieve your trombone as soon as 
+        we have finished making it. We also provide free 
+        returns if you are not satisfied.
+    </p>
+    <h2>Quality Assurance</h2>
+    <p>For every purchase you make, we will ensure there 
+        are no damages or faults and we will check and 
+        test the pitch of your instrument.</p>
+
+     <section id="how-it-works">
+            <iframe
+            id="video"
+            height="315"
+            src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=
+            0&amp;controls=0&amp;showinfo=0"
+            frameboder="0"
+            allowfullscreen
+            ></iframe>
+    </section>
+    <section id="pricing">
+        <div class="product" id="tenor">
+            <div class="level"> Tenor Trombone</div>
+                <h2>$600</h2>
+                <ol>
+                    <li>Diego Vidal es genial</li>
+                    <li>Diego Vidal es genial</li>
+                    <li>Diego Vidal es genial</li>
+                </ol>
+                <button  class="btn">Select</button>
+        </div>
+        <div class="product"  id="bass">
+            <div class="level">Bass Trombone</div>
+            <h2>$900</h2>
+                <ol>
+                    <li>Diego vidal es genial</li>
+                    <li>Diego vidal es genial</li>
+                    <li>Diego vidal es genial</li>
+                </ol>
+                <button  class="btn">Select</button>
+        </div>
+        <div class="product" id="valve">
+            <div class="level">Valve Trombone</div>
+                <h2>$1200</h2>
+                    <ol>
+                    <li>Diego vidal es genial</li>
+                    <li>Diego vidal es genial</li>
+                    <li>Diego vidal es genial</li>
+                </ol>
+                    <button  class="btn">Select</button>
+        </div>
+    </section>
+
+        <footer>
+        <nav>
+            <ul>
+                <li>Pivacy</li>
+                <li>Terms</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <p>Copyright 2016, Original Trombones</p>
+        </footer>
     </body>
     </html>
