Se agrego el archivo resetcss que sirve para trabajar un archivo sin estilos y lo que facilita agregar estilos depues y saber como se vera

--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@ un html5-->
        <div class="orange"></div>
        <div class="cyan"></div>
        <div class="raspberry"></div>
+       <section>
+          Siguiendo nuestro diseño estándar nos encontramos con las columnas que en la Figura 1-1
+          llamamos Información Principal y Barra Lateral. Como explicamos anteriormente, la
+          columna Información Principal contiene la información más relevante del documento y
+          puede ser encontrada en diferentes formas (por ejemplo, dividida en varios bloques o
+          columnas). Debido a que el propósito de estas columnas es más general, el elemento en
+          HTML5 que especifica estas secciones se llama simplemente "</section>" :
+        </section>
+
        <main>
       <!--REcordemos que la etiqueta main sirve para
     definir el contenido principal de una web  o el contenido
