Se movieron la barra de nav superior y se agrego una imagen, tambien se agregaron hipervinculos dentro del header, Se agregaron hipervinculos a la barra de navegacion inferior

--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -11,16 +11,24 @@
         <title>Product Landing Page</title>
     </head>
     <body>
-        <nav>
-            <ul>
-                <li>Features</li>
-                <li>How It Works</li>
-                <li>Pricing</li>
-            </ul>
-        </nav>
+        
         <header>
+            <div class="logo">
+                <img
+                id="header-img"
+                src="https://s3.amazonaws.com/freecodecamp/original_trombones.png"
+                alt="Original trombones logo">
+            </div>
+            <nav id="nav-bar">
+                <ul>
+                    <li><a class="nav-link" href="#features">Features</a></li>
+                    <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
+                    <li><a class="nav-link" href="#pricing">Pricing</a></li>
+                </ul>
+            </nav>
             <h1>Handcrafted, home-made masterpieces</h1>
         </header>
+        
         <form id="email-form">
         <input type="email"
         id="email-input" 
@@ -87,12 +95,12 @@
         <footer>
         <nav>
             <ul>
-                <li>Pivacy</li>
-                <li>Terms</li>
-                <li>Contact</li>
+                <li><a href="#">Pivacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <p>Copyright 2016, Original Trombones</p>
+        <span>Copyright 2016, Original Trombones</span>
         </footer>
     </body>
     </html>
