Change the nav bar and we add a new Page to the web called -blog-

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@ un html5-->
     
     </head>
     <body>
+      <nav class="main-nav-bar">
+        <ul class="main-list-nav">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="blog/mainblog.html">Blog</a></li>
+            <li><a href="#">Por que Diego vidal?</a></li>
+            <li><a href="#">  Mejora constante</a></li>
+        </ul>
+    </nav>
       <div class="gray-bar">
          <ul class="datos-contacto">
              <li>Contactame!</li>
@@ -38,13 +46,7 @@ un html5-->
             <li>Correo electronico: diego27796gagan@mail.com</li>
          </ul>
       </div>
-      <nav class="main-nav-bar">
-          <ul class="main-list-nav">
-              <li><a href="#">Por que Diego vidal?</a></li>
-              <li><a href="#">  Mejora constante</a></li>
-              <li><a href="#">siempe competitivos</a></li>
-          </ul>
-      </nav>
+
        <div class="second-gray-bar"></div>
        <div class="orange"></div>
        <div class="cyan"></div>
