--- a/product-landing-page/index.html
+++ b/product-landing-page/index.html
@@ -11,7 +11,7 @@
         <title>Product Landing Page</title>
     </head>
     <body>
-        
+        <div id="page-wrapper">
         <header>
             <div class="logo">
                 <img
@@ -27,36 +27,51 @@
                 </ul>
             </nav>
         </header>
-
         <div class="container"></div>
-
     <section id="hero">
          <h2>Handcrafted, home-made masterpieces</h2>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <input type="email"
-        id="email-input" 
-        name="email"
-        placeholder="Enter your email address"
-        required>
+        <input type="email" id="email-input" name="email" placeholder="Enter your email address" required>
         <input id="submit" type="submit" value="get started" class="btn">
-    </form>
+        </form>
     </section>
-
-    <h2>Premium Materias</h2>
-    <p>Our trombones use the shiniest brass which is 
-        sourced locally. This will increase the longevity
-        of your purchase
-    </p>
-    <h2>Fast Shipping</h2>
-    <p>We make sure you recieve your trombone as soon as 
-        we have finished making it. We also provide free 
-        returns if you are not satisfied.
-    </p>
-    <h2>Quality Assurance</h2>
-    <p>For every purchase you make, we will ensure there 
-        are no damages or faults and we will check and 
-        test the pitch of your instrument.</p>
-
+    <div class="container">
+     <section id="features">
+       <div class="grid">
+         <div class="icon"><i  class="fa fa-3x fa-truck"></i></div>
+           <div class="desc">
+             <h2>Premium Materias</h2>
+               <p>Our trombones use the shiniest brass which is 
+                  sourced locally. This will increase the 
+                  longevityof your purchase
+                </p>
+            </div>
+        </div>
+        <div class="grid">
+          <div class="icon">
+            <i  class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+          </div>
+            <div class="desc">
+                 <h2>Fast Shipping</h2>
+                <p>We make sure you recieve your trombone as soon as 
+                   we have finished making it. We also provide free 
+                   returns if you are not satisfied.
+                </p>
+                </div>
+                </div>
+        <div class="grid">
+          <div class="icon">
+            <i  class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+            </div>
+            <div class="desc">
+              <h2>Quality Assurance</h2>
+              <p>For every purchase you make, we will ensure there 
+                 are no damages or faults and we will check and 
+                 test the pitch of your instrument.
+               </p>
+             </div>
+            </div>
+        </section>
      <section id="how-it-works">
             <iframe
             id="video"
@@ -110,5 +125,7 @@
         </nav>
         <span>Copyright 2016, Original Trombones</span>
         </footer>
+    </div>
+</div>
     </body>
     </html>
