Se modifico la estructura de mi pagin web, Se agrego pagina portafolio con links hacia mis actividades como programador, se reconfiguro la barra de navegacion

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@ un html5-->
     <body>
       <nav class="main-nav-bar">
         <ul class="main-list-nav">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="blog/mainblog.html">Blog</a></li>
+            <li><a href="portfolio/portfolio-of-work.html">Portfolio of work</a></li>
             <li><a href="#">Por que Diego vidal?</a></li>
-            <li><a href="#">  Mejora constante</a></li>
         </ul>
     </nav>
       <div class="gray-bar">
@@ -51,6 +51,7 @@ un html5-->
        <div class="orange"></div>
        <div class="cyan"></div>
        <div class="raspberry"></div>
+       <div class="container">
        <section>
           Siguiendo nuestro diseño estándar nos encontramos con las columnas que en la Figura 1-1
           llamamos Información Principal y Barra Lateral. Como explicamos anteriormente, la
@@ -257,6 +258,7 @@ mas destacado. solo puede haber una etiqueta main-->
     
         &copy; DVidal Solutions Company
      </footer>
+    </div>
        </main>
        <!--Aqui cierra la tag main, nunca nunca deben ir dentro de
 las etiquetas header, footer, article, aside y nav, 
