We add a new page to the web called Diego Lab

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ un html5-->
             <li><a href="index.html">Home</a></li>
             <li><a href="blog/mainblog.html">Blog</a></li>
             <li><a href="portfolio/portfolio-of-work.html">Portfolio of work</a></li>
-            <li><a href="#">Por que Diego vidal?</a></li>
+            <li><a href="diegolab/diegolab.html">Diego Lab</a></li>
         </ul>
     </nav>
-      <div class="gray-bar">
+      <div class="contact-bar">
          <ul class="datos-contacto">
              <li>Contactame!</li>
             <li>Telefono celular: 993 432 0592</li>
