--- a/portfolio/portfolio-of-work.html
+++ b/portfolio/portfolio-of-work.html
@@ -9,7 +9,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../blog/mainblog.html">Blog</a></li>
                 <li><a href="#">Portfolio of work</a></li>
-                <li><a href="#">Por que Diego vidal?</a></li>
+                <li><a href="../diegolab/diegolab.html">Diego Lab</a></li>
             </ul>
         </nav>
         <header>
