We add some CSS properties to diego lab and portfolio of working to chage the visual efect of its tag h1 titles

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="../reset.css" rel="stylesheet" type="text/css"> 
+        <link href="../estilos.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <nav class="main-nav-bar">
@@ -11,11 +13,13 @@
                 <li><a href="#">Diego Lab</a></li>
             </ul>
         </nav>
+        <div class="container">
         <header>
-            <h1>Diego Lab</h1>
+            <h1 class="title-color title-border">Diego Lab</h1>
             <p>Welcome to diego lab! this is the place
                 where I will Share in all my knowledge with you!
             </p>
         </header>
+    </div>
     </body>
 </html>
