--- a/portfolio/portfolio-of-work.html
+++ b/portfolio/portfolio-of-work.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <link href="../reset.css" rel="stylesheet" type="text/css"> 
+        <link href="../estilos.css" rel="stylesheet" type="text/css">
     </head>
     <body>
         <nav class="main-nav-bar">
@@ -12,8 +13,9 @@
                 <li><a href="../diegolab/diegolab.html">Diego Lab</a></li>
             </ul>
         </nav>
+        <div class="container">
         <header>
-            <h1>Portfolio of work</h1>
+            <h1 class="title-color title-border">Portfolio of work</h1>
         </header>
         <p>Here you can see mi portfolio of work since my first project until the last!</p>
         <h2>
@@ -31,5 +33,7 @@
                </ul>
               </p>
         </h2>
+    </nav>
+</div>
     </body>
 </html>
