We add link to the Google page odin Challenge

--- a/portfolio/googlehomepage/google-home-page.html
+++ b/portfolio/googlehomepage/google-home-page.html
@@ -42,7 +42,7 @@
                     <li >Mexico</li>
 
                 </ul>
-                <ul>
+                <ul id="bottom-left-corner">
                     <li>Publicidad</li>
                     <li>Negocios</li>
                     <li>Sobre Google</li>
