--- a/portfolio/portfolio-of-work.html
+++ b/portfolio/portfolio-of-work.html
@@ -31,6 +31,9 @@
                <li><a href="../product-landing-page/index.html" target="_blank">tercera actividad
                  como desarrollador web</a>
                </ul>
+               <li><a href="googlehomepage/google-home-page.html" target="_blank">tercera actividad
+                como desarrollador web</a>
+              </ul>
               </p>
         </h2>
     </nav>
