--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -19,6 +19,59 @@
             <p>Welcome to diego lab! this is the place
                 where I will Share in all my knowledge with you!
             </p>
+            <div>
+            <h2>CSS Flexbox</h2>
+                <h3>Introduccion a Flexbox</h3>
+                <p>Una interfaz Web de usuario (UI) tiene dos componentes
+                Primero, Hay Elementos visuales, tal como los colores, fuentes,
+                 y imagenes.
+                 Segundo, Hay una ubicaion o posicionamiento de esos Elementos.
+                 En diseño Web Optimizado, un Diseño de interfaz de usuario(layout)
+                 debe ajustarse en varios buscadores y dispositivos acediendo 
+                  al contenido.
+                </p>
+                <p>
+                    CSS3 Introduce Cajas Felixbles (Flexible Boxes)
+                    o flexbox, para crear diseños de paginas para Una
+                    interfaz de usuario (UI) dinamica. Eso es un modo
+                    de diesaño que organiza elementos en una forma 
+                    predecible para diferentes tamaños de pantalllas
+                    y navegadores. 
+                    Mientras algo nuevo, Todos los buscadores/navegadores 
+                    populares soportan flexbox. Esta secion cubrira como 
+                    usar flexbox y las diferentes opciones de diseño que 
+                    ofrece.
+                </p>
+                <h3>CSS Flexbox: Usar "display: flex" para 
+                    posicionar dos Cajas
+                </h3>
+                <p>Esta seccion usa estilos de retos alternados
+                    para mostrar como usar CSS para el posicionamiento
+                    de elementos en una forma flexible. Primero un desafio
+                    explicara la teoria, luego un reto practico usando
+                    un componente simple de un tweet donde aplicaremos el
+                    concepto de flexbox 
+                </p>
+                <p>Colocando la propiedad <strong>display: flex;</strong> 
+                en un elemento te permitira usar otras propiedades de "flex"
+                para construir una pagina adaptable.
+            </p>
+            <p>Agrega la propiedad CSS <strong>display</strong>
+               a <strong>#box-container</strong> y configura
+               su valor a flex. 
+                <a href="css-felxbox/test-display-flex.html" target="_blank">prueba de flex</a>
+                aqui
+            </p>
+            <h3>CSS Flexbox: Agrega Super poderes Flex a un Tweet 
+                incrustado.
+            </h3>
+            <p>puedes <a 
+                href="css-felxbox/2-flexbox-add-superpowers.html"
+                target="_blank">
+                encontrar la prueba</a> aqui</p>
+
+
+            </div>
         </header>
     </div>
     </body>
