We add the new page called flexbox-flex-directions and we add it link into the page diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -69,7 +69,13 @@
                 href="css-felxbox/2-flexbox-add-superpowers.html"
                 target="_blank">
                 encontrar la prueba</a> aqui</p>
-
+            <h3>CSS Flexbox: Usa la propiedad <strong>"flex-direction"</strong>
+                para hacer una fila (row)
+            </h3>
+                <p>puedes <a 
+                    href="css-felxbox/flexbox-flex-directions.html"
+                    target="_blank">
+                    encontrar la prueba</a> aqui</p>
 
             </div>
         </header>
