We add the page called rows tweet embed-html, we add a link into the page diego lab to the new page that was added

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -76,6 +76,14 @@
                     href="css-felxbox/flexbox-flex-directions.html"
                     target="_blank">
                     encontrar la prueba</a> aqui</p>
+            <h3>
+                CSS Flexbox: Aplica la propiedad <stron>flex-direction</stron>
+                para crear filas(rows) en un tweet incrustado.
+             </h3>
+                 <p>puedes <a 
+                    href="css-felxbox/4-rows-tweet-embed.html"
+                    target="_blank">
+                    encontrar la prueba</a> aqui</p>
 
             </div>
         </header>
