We add 2 new pages into diego lab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -61,6 +61,7 @@
                su valor a flex. 
                 <a href="css-felxbox/test-display-flex.html" target="_blank">prueba de flex</a>
                 aqui
+                <hr>
             </p>
             <h3>CSS Flexbox: Agrega Super poderes Flex a un Tweet 
                 incrustado.
@@ -68,22 +69,47 @@
             <p>puedes <a 
                 href="css-felxbox/2-flexbox-add-superpowers.html"
                 target="_blank">
-                encontrar la prueba</a> aqui</p>
+                encontrar la prueba</a> aqui
+                <hr>
+            </p>
             <h3>CSS Flexbox: Usa la propiedad <strong>"flex-direction"</strong>
                 para hacer una fila (row)
             </h3>
                 <p>puedes <a 
                     href="css-felxbox/flexbox-flex-directions.html"
                     target="_blank">
-                    encontrar la prueba</a> aqui</p>
+                    encontrar la prueba</a> aqui
+                    <hr>
+                </p>
             <h3>
-                CSS Flexbox: Aplica la propiedad <stron>flex-direction</stron>
+                CSS Flexbox: Aplica la propiedad <strong>flex-direction</strong>
                 para crear filas(rows) en un tweet incrustado.
              </h3>
                  <p>puedes <a 
                     href="css-felxbox/4-rows-tweet-embed.html"
                     target="_blank">
-                    encontrar la prueba</a> aqui</p>
+                    encontrar la prueba</a> aqui
+                    <hr>
+                </p>
+            <h3>
+                CSS Flexbox: Usa la propiedad <strong>flex-direction</strong>
+                para hacer una columna.
+            </h3>
+            <p>
+                puedes <a href="css-felxbox/5-flexbox-make-column.html" 
+                target="_blank">encontrar la prueba</a>
+                aqui.
+                <hr>
+            </p>
+            <h3>
+                CSS Flexbox: Aplica la propiedad "flex-direction"
+                para crear una columna en un tweet incrustado.
+            </h3>
+            <p>
+                puedes<a href="css-felxbox/6-flexbox-column-tweet.html"
+                target="_blank">encontrar la prueba</a> aqui.
+                <hr>
+            </p>
 
             </div>
         </header>
